@@ -1,5 +1,5 @@
 /* TableColumn.java --
-   Copyright (C) 2002 Free Software Foundation, Inc.
+   Copyright (C) 2002, 2004 Free Software Foundation, Inc.
 
 This file is part of GNU Classpath.
 
@@ -35,12 +35,13 @@ this exception to your version of the library, but you are not
 obligated to do so.  If you do not wish to do so, delete this
 exception statement from your version. */
 
+
 package javax.swing.table;
 
 import java.beans.PropertyChangeListener;
 import java.io.Serializable;
-import javax.swing.event.SwingPropertyChangeSupport;
 
+import javax.swing.event.SwingPropertyChangeSupport;
 
 /**
  * TableColumn
@@ -52,242 +53,253 @@ public class TableColumn
 {
   static final long serialVersionUID = -6113660025878112608L;
 
-	/**
-	 * COLUMN_WIDTH_PROPERTY
-	 */
-	public static final String COLUMN_WIDTH_PROPERTY = "columWidth";
+  /**
+   * COLUMN_WIDTH_PROPERTY
+   */
+  public static final String COLUMN_WIDTH_PROPERTY = "columWidth";
 
-	/**
-	 * HEADER_VALUE_PROPERTY
-	 */
-	public static final String HEADER_VALUE_PROPERTY = "headerValue";
+  /**
+   * HEADER_VALUE_PROPERTY
+   */
+  public static final String HEADER_VALUE_PROPERTY = "headerValue";
 
-	/**
-	 * HEADER_RENDERER_PROPERTY
-	 */
-	public static final String HEADER_RENDERER_PROPERTY = "headerRenderer";
+  /**
+   * HEADER_RENDERER_PROPERTY
+   */
+  public static final String HEADER_RENDERER_PROPERTY = "headerRenderer";
 
-	/**
-	 * CELL_RENDERER_PROPERTY
-	 */
-	public static final String CELL_RENDERER_PROPERTY = "cellRenderer";
+  /**
+   * CELL_RENDERER_PROPERTY
+   */
+  public static final String CELL_RENDERER_PROPERTY = "cellRenderer";
 
-	/**
-	 * modelIndex
-	 */
-	protected int modelIndex;
+  /**
+   * modelIndex
+   */
+  protected int modelIndex;
 
-	/**
-	 * identifier
-	 */
-	protected Object identifier;
+  /**
+   * identifier
+   */
+  protected Object identifier;
 
-	/**
-	 * width
-	 */
-	protected int width;
+  /**
+   * width
+   */
+  protected int width;
 
-	/**
-	 * minWidth
-	 */
-	protected int minWidth	= 15;
+  /**
+   * minWidth
+   */
+  protected int minWidth = 15;
 
-	/**
-	 * preferredWidth
-	 */
-	private int preferredWidth;
+  /**
+   * preferredWidth
+   */
+  private int preferredWidth;
 
-	/**
-	 * maxWidth
-	 */
-	protected int maxWidth	= Integer.MAX_VALUE;
+  /**
+   * maxWidth
+   */
+  protected int maxWidth = Integer.MAX_VALUE;
 
-	/**
-	 * headerRenderer
-	 */
-	protected TableCellRenderer headerRenderer;
+  /**
+   * headerRenderer
+   */
+  protected TableCellRenderer headerRenderer;
 
-	/**
-	 * headerValue
-	 */
-	protected Object headerValue;
+  /**
+   * headerValue
+   */
+  protected Object headerValue;
 
-	/**
-	 * cellRenderer
-	 */
-	protected TableCellRenderer cellRenderer;
+  /**
+   * cellRenderer
+   */
+  protected TableCellRenderer cellRenderer;
 
-	/**
-	 * cellEditor
-	 */
-	protected TableCellEditor cellEditor;
+  /**
+   * cellEditor
+   */
+  protected TableCellEditor cellEditor;
 
-	/**
-	 * isResizable
-	 */
-	protected boolean isResizable	= true;
+  /**
+   * isResizable
+   */
+  protected boolean isResizable = true;
 
-	/**
-	 * resizedPostingDisableCount
-	 */
-	protected transient int resizedPostingDisableCount;
+  /**
+   * resizedPostingDisableCount
+   *
+   * @deprecated 1.3
+   */
+  protected transient int resizedPostingDisableCount;
 
-	/**
-	 * changeSupport
-	 */
+  /**
+   * changeSupport
+   */
   private SwingPropertyChangeSupport changeSupport =
     new SwingPropertyChangeSupport(this);
 
-	/**
-	 * Constructor TableColumn
-	 */
+  /**
+   * Constructor TableColumn
+   */
   public TableColumn()
   {
-		this(0, 75, null, null);
+    this(0, 75, null, null);
   }
 
-	/**
-	 * Constructor TableColumn
-	 * @param modelIndex TODO
-	 */
+  /**
+   * Constructor TableColumn
+   * 
+   * @param modelIndex the index of the column in the model
+   */
   public TableColumn(int modelIndex)
   {
-		this(modelIndex, 75, null, null);
+    this(modelIndex, 75, null, null);
   }
 
-	/**
-	 * Constructor TableColumn
-	 * @param modelIndex TODO
-	 * @param width TODO
-	 */
+  /**
+   * Constructor TableColumn
+   * 
+   * @param modelIndex the index of the column in the model
+   * @param width the width
+   */
   public TableColumn(int modelIndex, int width)
   {
-		this(modelIndex, width, null, null);
+    this(modelIndex, width, null, null);
   }
 
-	/**
-	 * Constructor TableColumn
-	 * @param modelIndex TODO
-	 * @param width TODO
-	 * @param cellRenderer TODO
-	 * @param cellEditor TODO
-	 */
-	public TableColumn(int modelIndex, int width,
+  /**
+   * Constructor TableColumn
+   * 
+   * @param modelIndex the index of the column in the model
+   * @param width the width
+   * @param cellRenderer the cell renderer
+   * @param cellEditor the cell editor
+   */
+  public TableColumn(int modelIndex, int width,
                      TableCellRenderer cellRenderer, TableCellEditor cellEditor)
   {
-		this.modelIndex = modelIndex;
-		this.width = width;
-		this.preferredWidth = width;
-		this.cellRenderer = cellRenderer;
-		this.cellEditor = cellEditor;
-		this.headerValue = null;
-		this.identifier = null;
+    this.modelIndex = modelIndex;
+    this.width = width;
+    this.preferredWidth = width;
+    this.cellRenderer = cellRenderer;
+    this.cellEditor = cellEditor;
+    this.headerValue = null;
+    this.identifier = null;
   }
 
-	/**
-	 * firePropertyChange
-	 * @param property TODO
-	 * @param oldValue TODO
-	 * @param newValue TODO
-	 */
+  /**
+   * firePropertyChange
+   * 
+   * @param property the name of the property
+   * @param oldValue the old value
+   * @param newValue the new value
+   */
   private void firePropertyChange(String property, Object oldValue,
                                   Object newValue)
   {
-		changeSupport.firePropertyChange(property, oldValue, newValue);
+    changeSupport.firePropertyChange(property, oldValue, newValue);
   }
 
-	/**
-	 * firePropertyChange
-	 * @param property TODO
-	 * @param oldValue TODO
-	 * @param newValue TODO
-	 */
+  /**
+   * firePropertyChange
+   * 
+   * @param property the name of the property
+   * @param oldValue the old value
+   * @param newValue the new value
+   */
   private void firePropertyChange(String property, int oldValue, int newValue)
   {
-		firePropertyChange(property, new Integer(oldValue), new Integer(newValue));
+    firePropertyChange(property, new Integer(oldValue), new Integer(newValue));
   }
 
-	/**
-	 * firePropertyChange
-	 * @param property TODO
-	 * @param oldValue TODO
-	 * @param newValue TODO
-	 */
+  /**
+   * firePropertyChange
+   * 
+   * @param property the name of the property 
+   * @param oldValue the old value
+   * @param newValue the new value
+   */
   private void firePropertyChange(String property, boolean oldValue,
                                   boolean newValue)
-	{
-		firePropertyChange(property, new Boolean(oldValue), new Boolean(newValue));
-	}
+  {
+    firePropertyChange(property, Boolean.valueOf(oldValue),
+		       Boolean.valueOf(newValue));
+  }
 
-	/**
-	 * setModelIndex
-	 * @param modelIndex TODO
-	 */
+  /**
+   * setModelIndex
+   * 
+   * @param modelIndex the index to set
+   */
   public void setModelIndex(int modelIndex)
   {
-		this.modelIndex = modelIndex;
+    this.modelIndex = modelIndex;
   }
 
-	/**
-	 * getModelIndex
-   * @return int
-	 */
+  /**
+   * getModelIndex
+   * 
+   * @return the model index
+   */
   public int getModelIndex()
   {
-		return modelIndex;
+    return modelIndex;
   }
 
-	/**
-	 * setIdentifier
-	 * @param identifier TODO
-	 */
+  /**
+   * setIdentifier
+   * 
+   * @param identifier the identifier
+   */
   public void setIdentifier(Object identifier)
   {
-		this.identifier = identifier;
+    this.identifier = identifier;
   }
 
-	/**
-	 * getIdentifier
-   * @return Object
-	 */
+  /**
+   * getIdentifier
+   * 
+   * @return the identifier
+   */
   public Object getIdentifier()
   {
     if (identifier == null)
-			return getHeaderValue();
-		return identifier;
+      return getHeaderValue();
+    return identifier;
   }
 
-	/**
-	 * setHeaderValue
-	 * @param headerValue TODO
-	 */
+  /**
+   * setHeaderValue
+   * 
+   * @param headerValue the value of the header
+   */
   public void setHeaderValue(Object headerValue)
   {
-		// Variables
-		Object	oldValue;
-
-		// Get Old Value
-		oldValue = this.headerValue;
-
-		// Set Propeprty
-		this.headerValue = headerValue;
-
-		// Notify Listeners of change
+    if (this.headerValue == headerValue)
+      return;
+    
+    Object oldValue = this.headerValue;
+    this.headerValue = headerValue;
     firePropertyChange(HEADER_VALUE_PROPERTY, oldValue, headerValue);
   }
 
-	/**
-	 * getHeaderValue
-   * @return Object
-	 */
+  /**
+   * getHeaderValue
+   * 
+   * @return the value of the header
+   */
   public Object getHeaderValue()
   {
-		return headerValue;
+    return headerValue;
   }
 
   /**
    * setHeaderRenderer
-   * @param headerRenderer TODO
+   * 
+   * @param headerRenderer the renderer to se
    */
   public void setHeaderRenderer(TableCellRenderer renderer)
   {
@@ -300,18 +312,19 @@ public class TableColumn
 		       oldRenderer, headerRenderer);
   }
 
-	/**
-	 * getHeaderRenderer
+  /**
+   * getHeaderRenderer
    * @return TableCellRenderer
-	 */
+   */
   public TableCellRenderer getHeaderRenderer()
   {
-		return headerRenderer;
+    return headerRenderer;
   }
 
   /**
    * setCellRenderer
-   * @param cellRenderer TODO
+   * 
+   * @param cellRenderer the cell renderer
    */
   public void setCellRenderer(TableCellRenderer renderer)
   {
@@ -324,36 +337,40 @@ public class TableColumn
 		       oldRenderer, cellRenderer);
   }
 
-	/**
-	 * getCellRenderer
-   * @return TableCellRenderer
-	 */
+  /**
+   * getCellRenderer
+   * 
+   * @return the cell renderer
+   */
   public TableCellRenderer getCellRenderer()
   {
-		return cellRenderer;
+    return cellRenderer;
   }
 
-	/**
-	 * setCellEditor
-	 * @param cellEditor TODO
-	 */
+  /**
+   * setCellEditor
+   * 
+   * @param cellEditor the cell editor
+   */
   public void setCellEditor(TableCellEditor cellEditor)
   {
-		this.cellEditor = cellEditor;
+    this.cellEditor = cellEditor;
   }
 
-	/**
-	 * getCellEditor
-   * @return TableCellEditor
-	 */
+  /**
+   * getCellEditor
+   * 
+   * @return the cell editor
+   */
   public TableCellEditor getCellEditor()
   {
-		return cellEditor;
+    return cellEditor;
   }
 
   /**
    * setWidth
-   * @param newWidth TODO
+   * 
+   * @param newWidth the width
    */
   public void setWidth(int newWidth)
   {
@@ -372,144 +389,166 @@ public class TableColumn
     firePropertyChange(COLUMN_WIDTH_PROPERTY, oldWidth, width);
   }
 
-	/**
-	 * getWidth
+  /**
+   * getWidth
+   * 
    * @return int
-	 */
+   */
   public int getWidth()
   {
-		return width;
+    return width;
   }
 
-	/**
-	 * setPreferredWidth
-	 * @param preferredWidth TODO
-	 */
+  /**
+   * setPreferredWidth
+   * 
+   * @param preferredWidth the preferred width
+   */
   public void setPreferredWidth(int preferredWidth)
   {
     if (preferredWidth < minWidth)
-			this.preferredWidth = minWidth;
+      this.preferredWidth = minWidth;
     else if (preferredWidth > maxWidth)
-			this.preferredWidth = maxWidth;
+      this.preferredWidth = maxWidth;
     else
-			this.preferredWidth = preferredWidth;
+      this.preferredWidth = preferredWidth;
   }
 
-	/**
-	 * getPreferredWidth
-   * @return int
-	 */
+  /**
+   * getPreferredWidth
+   * 
+   * @return the preferred width
+   */
   public int getPreferredWidth()
   {
-		return preferredWidth;
+    return preferredWidth;
   }
 
-	/**
-	 * setMinWidth
-	 * @param minWidth TODO
-	 */
+  /**
+   * setMinWidth
+   * 
+   * @param minWidth the minium width
+   */
   public void setMinWidth(int minWidth)
   {
-		this.minWidth = minWidth;
-		setWidth(getWidth());
-		setPreferredWidth(getPreferredWidth());
+    this.minWidth = minWidth;
+    setWidth(getWidth());
+    setPreferredWidth(getPreferredWidth());
   }
 
-	/**
-	 * getMinWidth
-   * @return int
-	 */
+  /**
+   * getMinWidth
+   * 
+   * @return the minimum width
+   */
   public int getMinWidth()
   {
-		return minWidth;
+    return minWidth;
   }
 
-	/**
-	 * setMaxWidth
-	 * @param maxWidth TODO
-	 */
+  /**
+   * setMaxWidth
+   * 
+   * @param maxWidth the maximum width
+   */
   public void setMaxWidth(int maxWidth)
   {
-		this.maxWidth = maxWidth;
-		setWidth(getWidth());
-		setPreferredWidth(getPreferredWidth());
+    this.maxWidth = maxWidth;
+    setWidth(getWidth());
+    setPreferredWidth(getPreferredWidth());
   }
 
-	/**
-	 * getMaxWidth
-   * @return int
-	 */
+  /**
+   * getMaxWidth
+   * @return the maximim width
+   */
   public int getMaxWidth()
   {
-		return maxWidth;
+    return maxWidth;
   }
 
-	/**
-	 * setResizable
-	 * @param isResizable TODO
-	 */
+  /**
+   * setResizable
+   * 
+   * @param isResizable <code>true</code> if this column is resizable,
+   * <code>false</code> otherwise
+   */
   public void setResizable(boolean isResizable)
   {
-		this.isResizable = isResizable;
+    this.isResizable = isResizable;
   }
 
-	/**
-	 * getResizable
-   * @return boolean
-	 */
+  /**
+   * getResizable
+   * 
+   * @return <code>true</code> if this column is resizable,
+   * <code>false</code> otherwise
+   */
   public boolean getResizable()
   {
-		return isResizable;
+    return isResizable;
   }
 
-	/**
-	 * sizeWidthToFit
-	 */
+  /**
+   * sizeWidthToFit
+   */
   public void sizeWidthToFit()
   {
-		// TODO
+    // TODO
   }
 
-	/**
-	 * disableResizedPosting
-	 */
+  /**
+   * disableResizedPosting
+   *
+   * @deprecated 1.3
+   */
   public void disableResizedPosting()
   {
-		// Does nothing
+    // Does nothing
   }
 
-	/**
-	 * enableResizedPosting
-	 */
+  /**
+   * enableResizedPosting
+   *
+   * @deprecated 1.3
+   */
   public void enableResizedPosting()
   {
-		// Does nothing
+    // Does nothing
   }
 
-	/**
-	 * addPropertyChangeListener
+  /**
+   * addPropertyChangeListener
    * @param listener the listener to all
-	 */
+   */
   public synchronized void addPropertyChangeListener(PropertyChangeListener listener)
   {
-		changeSupport.addPropertyChangeListener(listener);
+    changeSupport.addPropertyChangeListener(listener);
   }
 
-	/**
-	 * removePropertyChangeListener
+  /**
+   * removePropertyChangeListener
    * @param listener the listener to remove
-	 */
+   */
   public synchronized void removePropertyChangeListener(PropertyChangeListener listener)
   {
-		changeSupport.removePropertyChangeListener(listener);
+    changeSupport.removePropertyChangeListener(listener);
   }
 
-	/**
-	 * createDefaultHeaderRenderer
+  /**
+   * @since 1.4
+   */
+  public PropertyChangeListener[] getPropertyChangeListeners()
+  {
+    return changeSupport.getPropertyChangeListeners();
+  }
+
+  /**
+   * createDefaultHeaderRenderer
    * @return TableCellRenderer
-	 */
+   */
   protected TableCellRenderer createDefaultHeaderRenderer()
   {
-		return new DefaultTableCellRenderer();
+    return new DefaultTableCellRenderer();
   }
 }
